# labo1

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  environment.yml  index.html  matplotlibrc  mkdocs.yml  objects.inv  pixi.toml  pyproject.toml  replace.py  requirements.docs.txt  tox.ini  versions.json
.github/workflows/: ci.yml  test-pre-releases.yml
1.0.0/: 404.html  index.html
1.0.0/ajustes/basico/: index.html
1.0.0/ajustes/graficos/: index.html
1.0.0/ajustes/no-lineal/: index.html
1.0.0/ajustes/ponderado/: index.html
1.0.0/search/: search_index.json
1.1.0/: 404.html  index.html  objects.inv
1.1.0/API/: index.html
1.1.0/ajustes/basico/: index.html
1.1.0/ajustes/graficos/: index.html
1.1.0/ajustes/no-lineal/: index.html
1.1.0/ajustes/ponderado/: index.html
1.1.0/search/: search_index.json
1.1.1/: index.html
1.1.1/API/: index.html
1.1.1/ajustes/basico/: index.html
1.1.1/ajustes/graficos/: index.html
1.1.1/ajustes/no-lineal/: index.html
1.1.1/ajustes/ponderado/: index.html
1.1.1/search/: search_index.json
1.2.0/: 404.html  index.html
1.2.0/API/: index.html
1.2.0/ajustes/basico/: index.html
1.2.0/ajustes/graficos/: index.html
1.2.0/ajustes/no-lineal/: index.html
1.2.0/ajustes/ponderado/: index.html
1.2.0/search/: search_index.json
2.0.0/: index.html  objects.inv
2.0.0/API/: index.html
2.0.0/ajustes/basico/: index.html
2.0.0/ajustes/graficos/: index.html
2.0.0/ajustes/no-lineal/: index.html
2.0.0/ajustes/ponderado/: index.html
2.0.0/search/: search_index.json
API/: index.html
ajustes/basico/: index.html
ajustes/graficos/: index.html
ajustes/no-lineal/: index.html
ajustes/ponderado/: index.html
docs/: API.md  index.py
docs/ajustes/: basico.py  graficos.py  no-lineal.py  ponderado.py
latest/: 404.html  index.html  objects.inv
latest/API/: index.html
latest/ajustes/basico/: index.html
latest/ajustes/graficos/: index.html
latest/ajustes/no-lineal/: index.html
latest/ajustes/ponderado/: index.html
latest/search/: search_index.json
search/: search_index.json
src/labo1/: __init__.py  fit.py  plot.py  round.py
src/labo1/tests/: test_fit.py  test_round.py
