[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[project]
name = "labo1"
authors = [
    { name="Mauro Silberberg", email="maurosilber@gmail.com" },
]
description = ""
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]
keywords = []
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
"Homepage" = "https://github.com/maurosilber/labo1"
"Bug Tracker" = "https://github.com/maurosilber/labo1/issues"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = "."

[tool.ruff]
extend-include = ["*.ipynb"]
select = ["E", "F", "I"]
